cardcontent width fix - pages scroll to top

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="https://img.itch.zone/aW1hZ2UvOTU4NjQ2LzU0NDExMTcucG5n/original/8zGyIc.png" />
+    <link rel="icon" href="../public/icon.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
